modified:   form.css 	modified:   form.html 	modified:   form.js

--- a/form.html
+++ b/form.html
@@ -11,6 +11,7 @@
 
 <body>  
     <div class="contact_form"> 
+        <nav><a href="/index.html">Página Principal</a></nav>
         <h1>Formulario de contacto</h1>
         <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
         <form  class="contactForm" method="POST">       <!-- action="https://mailthis.to/guillermo.fairhurst@gmail.com" -->
