modified:   form.css 	modified:   form.html 	modified:   form.js

--- a/form.html
+++ b/form.html
@@ -28,7 +28,7 @@
         <h1>Formulario de contacto</h1>
         <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
         <!-- Formulario de Contacto-->
-        <form name="contactForm" class="contactForm" action="https://formspree.io/f/mrgdlzkd" method="POST">       <!-- action="https://mailthis.to/guillermo.fairhurst@gmail.com" -->
+        <form name="contactForm" id="contactForm" class="contactForm" action="https://formspree.io/f/mrgdlzkd" method="POST">       <!-- action="https://mailthis.to/guillermo.fairhurst@gmail.com" -->
             <!-- Nombre de Contacto-->    
             <div>
                 <label for="nombre">Nombre
@@ -336,7 +336,7 @@
             </div>                    
             
             <!-- Submit Formulario-->
-            <button type="submit" class="enviar_formulario" id="enviar" ><p>Enviar</p></button>
+            <button type="submit" class="enviar_formulario" id="enviar" >Enviar</button>
 
             <footer class="aviso">
                 <span class="obligatorio"> * </span>los campos son obligatorios.
