modified:   clima.html 	modified:   form.html 	modified:   index.css 	modified:   index.html 	modified:   naves.html 	new file:   naves.js 	modified:   viajes.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:wght@100&display=swap" rel="stylesheet"> 
-    <script src="./fetchApiClima.js"></script>
+    <script src="./index.js"></script>
 </head>
 <body>
 
@@ -40,16 +40,16 @@
                 <a class="container" href="clima.html">Clima</a>
                 <a class="container" href="viajes.html">Viajes</a>
             </section>
-            <div class="flex">
+           <!--  <div class="flex">
 
                 <span class="material-symbols-outlined">
                     search
                 </span>
                 <input class="input"type="text">
-            </div>
-            <!-- <div>
-                <a class="btn btn-coral" href="form.html" onclick=cambiarTexto()>Unirse</a>
             </div> -->
+            <div class="container flex">
+                <a class="btn btn-coral" href="form.html">Suscribirse</a>
+            </div>
         </nav>
 
         <main class="main container flex">
@@ -83,7 +83,7 @@
 
         </main>
 
-        <aside class="aside container flex">
+        <aside id="as" class="aside container flex hidden">
             <section class="form-boton">
 
             </section>
@@ -95,6 +95,5 @@
         </footer>
     </article>
     
-  
 </body>
 </html>
