--- a/viajes.html
+++ b/viajes.html
@@ -37,16 +37,10 @@
                 <a class="container" href="naves.html">Naves</a>
                 <a class="container" href="clima.html">Clima</a>
             </section>
-            <div class="flex">
-
-                <span class="material-symbols-outlined">
-                    search
-                </span>
-                <input class="input"type="text">
+            <div class="container flex">
+                <a class="btn btn-coral" href="form.html">Suscribirse</a>
             </div>
-            <div>
-                <a class="btn btn-coral" href="form.html">Unirse</a>
-            </div>
+            
         </nav>
 
         <main class="main container flex">
@@ -80,7 +74,7 @@
 
         </main>
 
-        <aside class="aside container flex">
+        <aside class="aside container flex hidden">
             <section class="form-boton">
 
             </section>
