--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
 
 <body>  
     <div class="contact_form"> 
-        <nav><a href="/index.html">Página Principal</a></nav>
+        <nav><a href="./index.html">Página Principal</a></nav>
         <h1>Formulario de contacto</h1>
         <h3>Escríbenos y en breve los pondremos en contacto contigo</h3>
         <!-- Formulario de Contacto-->
