modified:   aerolineas.html 	modified:   aerolineas.js 	modified:   clima.html 	modified:   index.css 	modified:   index.html 	modified:   viajes.html

--- a/viajes.html
+++ b/viajes.html
@@ -33,7 +33,7 @@
             </section>
             
             <section class="container flex max-wid">
-                <h2><a class="container" href="index.html">Home</a></h2>
+                <h2><a class="container" href="index.html">Inicio</a></h2>
                 <h2><a class="container" href="aerolineas.html">Aerolineas</a></h2>
                 <h2><a class="container" href="clima.html">Clima</a></h2>
             </section>
