--- a/clima.html
+++ b/clima.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Grupal - Home</title>
+    <title>Chequea tu viaje</title>
     <!--<script type="text/javascript" src="./fetch.js"  async></script>-->
     <link rel="stylesheet" href="./index.css">
     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap">-->
@@ -15,8 +15,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:wght@100&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Raleway:wght@100&display=swap" rel="stylesheet"> 
 </head>
 <body>
 
@@ -34,7 +34,7 @@
             </section>
 
             <section class="container flex wid-max">
-                <h2><a class="container" href="index.html">Home</a></h2>
+                <h2><a class="container" href="index.html">Inicio</a></h2>
                 <h2><a class="container" href="aerolineas.html">Aerolineas</a></h2>
                 <h2><a class="container" href="viajes.html">Viajes</a></h2>
             </section>
