--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 
             </section>
             
-            <section class="container flex wid-max">
+            <section class="container-s flex wid-max">
                 <h2><a class="container" href="aerolineas.html">Aerolineas</a></h2>
                 <h2><a class="container" href="clima.html">Clima</a></h2>
                 <h2><a class="container" href="viajes.html">Viajes</a></h2>
@@ -46,7 +46,7 @@
                 </span>
                 <input class="input"type="text">
             </div> -->
-            <div class="container flex">
+            <div class="container-s flex">
                 <a class="btn btn-coral" href="form.html">Suscribirse</a>
             </div>
         </nav>
