--- a/viajes.html
+++ b/viajes.html
@@ -32,7 +32,7 @@
                 
             </section>
             
-            <section class="container flex max-wid">
+            <section class="container flex wid-max">
                 <h2><a class="container" href="index.html">Inicio</a></h2>
                 <h2><a class="container" href="aerolineas.html">Aerolineas</a></h2>
                 <h2><a class="container" href="clima.html">Clima</a></h2>
