modified:   aerolineas.html 	modified:   clima.html 	modified:   index.html 	modified:   viajes.html

--- a/clima.html
+++ b/clima.html
@@ -33,12 +33,12 @@
                 
             </section>
 
-            <section class="container flex wid-max">
+            <section class="container-s flex wid-max">
                 <h2><a class="container" href="index.html">Inicio</a></h2>
                 <h2><a class="container" href="aerolineas.html">Aerolineas</a></h2>
                 <h2><a class="container" href="viajes.html">Viajes</a></h2>
             </section>
-             <div class="container flex">
+             <div class="container-s flex">
                 <a class="btn btn-coral" href="form.html">Suscribirse</a>
             </div>
             
