--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Grupal - Home</title>
+    <title>Chequea tu viaje</title>
     <!--<script type="text/javascript" src="./fetch.js"  async></script>-->
     <link rel="stylesheet" href="./index.css">
     <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap">-->
@@ -39,13 +39,7 @@
                 <h2><a class="container" href="clima.html">Clima</a></h2>
                 <h2><a class="container" href="viajes.html">Viajes</a></h2>
             </section>
-           <!--  <div class="flex">
-
-                <span class="material-symbols-outlined">
-                    search
-                </span>
-                <input class="input"type="text">
-            </div> -->
+        
             <div class="container-s flex">
                 <a class="btn btn-coral" href="form.html">Suscribirse</a>
             </div>
