--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <li>
                             <article class="naves">
                                 <h2>Aerolineas</h2>
-                                <h3>Conoce en detalle las Naves de nuestra flota</h3>
+                                <h3>Conoce la flota de las aerolíneas</h3>
                                 <!-- <p><a href="#" class="btn btn-coral">Ir</a></p> -->
                             </article>
                         </li>
