modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
         <aside class="asideTwo container flex"><h1 class="aside2">Aside 2</h1></aside>
         
         <footer class="footer containerMax flex">
-            <h1>Footer</h1>
+            <h1>CodoAcodo</h1>
+            <h3 class="text-footer">Sitio desarrollado por: Guillermo Fairhurst, Oscar Gerpe Nieto y Guil Alejandro</h3>
         </footer>
     </article>
     
