modified:   aerolineas.html 	modified:   index.css 	modified:   index.html 	modified:   viajes.html

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         </main>
 
         <aside id="as" class="aside container flex hidden">
-            <section class="form-boton">
-
+            <section class="form-boton espacio-publi">
+                <h2 class="tx-a-c">Espacio publicitario</h2>
             </section>
         </aside>
         <aside class="asideTwo container flex"><h1 class="aside2">Aside 2</h1></aside>
