--- a/viajes.html
+++ b/viajes.html
@@ -75,14 +75,15 @@
         </main>
 
         <aside class="aside container flex hidden">
-            <section class="form-boton">
-
+            <section class="form-boton espacio-publi">
+                <h2 class="tx-a-c">Espacio publicitario</h2>
             </section>
         </aside>
         <aside class="asideTwo container flex"><h1>Aside 2</h1></aside>
         
         <footer class="footer containerMax flex">
-            <h1>Footer</h1>
+            <h1>CodoAcodo</h1>
+            <h3 class="text-footer">Sitio desarrollado por: Guillermo Fairhurst, Oscar Gerpe Nieto y Guil Alejandro</h3>
         </footer>
     </article>
     
