--- a/index.html
+++ b/index.html
@@ -81,12 +81,33 @@
 
             </section>
         </aside>
-        <aside class="asideTwo container flex"><h1 class="aside2">Aside 2</h1></aside>
-        
-        <footer class="footer containerMax flex">
-            <h1>Footer</h1>
-        </footer>
-    </article>
+        <aside class="asideTwo container flex"><h1 class="aside2">Aside 2</h1></aside> 
+        <footer class="footer containerMax flex" id="page-footer">
+            <div class="container__footer">
+                <div class="box__footer">
+                    <div class="logo">
+                        <img src="img/Productos-y-servicios-de-las-agencias-de-viajes-660x330.jpg" alt="">
+                    </div>
+                    <div class="terms">
+                        <p>APP desarrollada por equipo 6 para el Proyecto Web del programa Codo a Codo</p>
+                    </div>
+                </div>
+
+                <div class="box__footer">
+                    <h2>Agradecimientos</h2>
+                    <a href="#">openweathermap.org</a>
+                    <a href="#">Aerolineas Argentinas</a>
+                    <a href="#">Flybondi</a>
+                    <a href="#">JetSmart</a>
+                    <a href="#">Alas La Rioja</a>              
+                </div>    
+            </div>
     
+            <div class="box__copyright">
+                <hr>
+                <p>Todos los derechos reservados © 2022</p>
+            </div>
+        </footer>
+    </article> 
 </body>
 </html>
