--- a/clima.html
+++ b/clima.html
@@ -43,47 +43,49 @@
             </div>
             
         </nav>
+<div class="flex">
 
-        <div class="wrapper" id="clima_ppal">
-            <header><i class='bx bx-left-arrow-alt'></i>Consulta de Clima</header>
-            <section class="input-part">
-            <p class="info-txt"></p>
-            <div class="content">
-                <input type="text" spellcheck="false" placeholder="Ingrese nombre de la ciudad" required>
-                <div class="separator"></div>
-                <button>Clima en su ubicacion</button>
-            </div>
-            </section>
-            <section class="weather-part">
-            <img src="" alt="Weather Icon">
-            <div class="temp">
-                <span class="numb">_</span>
+    <div class="wrapper container" id="clima_ppal">
+        <header><i class='bx bx-left-arrow-alt'></i>Consulta de Clima</header>
+        <section class="input-part">
+        <p class="info-txt"></p>
+        <div class="content">
+            <input type="text" spellcheck="false" placeholder="Ingrese nombre de la ciudad" required>
+            <div class="separator"></div>
+            <button>Clima en su ubicacion</button>
+        </div>
+        </section>
+        <section class="weather-part">
+        <img src="" alt="Weather Icon">
+        <div class="temp">
+            <span class="numb">_</span>
+            <span class="deg">°</span>C
+        </div>
+        <div class="weather">_ _</div>
+        <div class="location">
+            <i class='bx bx-map'></i>
+            <span>_, _</span>
+        </div>
+        <div class="bottom-details">
+            <div class="column feels">
+            <i class='bx bxs-thermometer'></i>
+            <div class="details">
+                <div class="temp">
+                <span class="numb-2">_</span>
                 <span class="deg">°</span>C
+                </div>
+                <p>Sensaciòn Tèrmica</p>
             </div>
-            <div class="weather">_ _</div>
-            <div class="location">
-                <i class='bx bx-map'></i>
-                <span>_, _</span>
             </div>
-            <div class="bottom-details">
-                <div class="column feels">
-                <i class='bx bxs-thermometer'></i>
-                <div class="details">
-                    <div class="temp">
-                    <span class="numb-2">_</span>
-                    <span class="deg">°</span>C
-                    </div>
-                    <p>Sensaciòn Tèrmica</p>
-                </div>
-                </div>
-                <div class="column humidity">
-                <i class='bx bxs-droplet-half'></i>
-                <div class="details">
-                    <span>_</span>
-                    <p>Hùmedad</p>
-                </div>
-                </div>
+            <div class="column humidity">
+            <i class='bx bxs-droplet-half'></i>
+            <div class="details">
+                <span>_</span>
+                <p>Hùmedad</p>
             </div>
+            </div>
+        </div>
+</div>
             </section>
         </div>
         
