modified:   aerolineas.html 	modified:   clima.html 	modified:   form.css 	modified:   form2.html 	modified:   index.css 	modified:   index.html 	modified:   viajes.html

--- a/clima.html
+++ b/clima.html
@@ -40,7 +40,7 @@
                 <h2><a class="container" href="viajes.html">Viajes</a></h2>
             </section>
            <section class="container-s flex">
-                <a class="btn btn-coral" href="form.html" >Suscribirse</a>
+                <a class="btn btn-coral" href="form2.html" >Suscribirse</a>
             </section>
             
         </nav>
