--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </section>
         
             <div class="container-s flex">
-                <a class="btn btn-coral" href="form.html">Suscribirse</a>
+                <a class="btn btn-coral" href="form2.html">Suscribirse</a>
             </div>
         </nav>
 
