--- a/viajes.html
+++ b/viajes.html
@@ -38,7 +38,7 @@
                 <h2><a class="container" href="clima.html">Clima</a></h2>
             </section>
             <div class="container-s flex">
-                <a class="btn btn-coral" href="form.html">Suscribirse</a>
+                <a class="btn btn-coral" href="form2.html">Suscribirse</a>
             </div>
              
         </nav>
